# api

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: glossario.md  pull-requests.md  roadmap.md
src/app/: main.py
src/app/api/: router.py
src/app/api/routes/: echo.py  health.py  mentors.py  ping.py
src/app/core/: config.py  logging.py
src/app/db/: session.py
src/app/models/: __init__.py  mentor.py
tests/: conftest.py  test_echo.py  test_health.py  test_mentors.py  test_ping.py
